--- a/build.xml
+++ b/build.xml
@@ -3,8 +3,7 @@
 
     <property file="local.properties" />
     <property name="output" value="classes" />
-    <property name="run.arg.line" value="" />
-    <property name="run.jvmarg.line" value="" />
+    <property name="run.arg.line" value="--host=jitmeet.example.com --domain=jitmeet.example.com --port=5349 --secret=IfGaish6" />
     <property name="dist" value="dist" />
     <property name="doc" value="doc"/>
     <property name="java.doc" value="${doc}/api"/>
@@ -100,7 +99,7 @@
 	            classname="org.jitsi.videobridge.Main"
 	            classpathref="run.classpath"
 	            failonerror="true"
-	            fork="true" >
+	            fork="false" >
             <jvmarg line="${run.java.library.path} ${run.jvmarg.line}" />
             <arg line="${run.arg.line}" />
         </java>
